<resources>
    <string name="app_name">Furti</string>
    <string name="title_activity_main">Furti</string>
    <string name="title_activity_aggiungere_furto">Aggiungere Furto</string>
    <string name="title_activity_map_cercare_posto">Cercare Posto</string>
    <string name="title_activity_gestire_preferiti">Gestisci preferiti</string>
    <string name="title_activity_aggiungere_preferito">Aggiungi un nuovo preferito</string>
    <string name="title_cancella_preferiti">Cancellare preferiti</string>
    <string name="title_activity_info_furto">Informazioni di Furto</string>

    <string name="action_settings">Settings</string>
    <string name="action_preferiti">Preferiti</string>

    <string name="titolo_furto">Titolo</string>
    <string name="tipo_furto">Tipo di furto</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="indirizzo_hint">via , numero, città</string>
    <string name="date">Data</string>
    <string name="date_hint">dd/mm/aaaa</string>
    <string name="ora">Ora</string>
    <string name="view_commenti">Commenti</string>
    <string name="commento">Commento</string>
    <string name="commento_hint">Aggiungere un commento se volete</string>
    <string name="descrizione">Descrizione</string>
    <string name="descrizione_hint">Scrivere una descrizione del furto</string>
    <string name="drawer_open">Apri</string>
    <string name="drawer_close">Chiudi</string>
    <string name="NessunPreferitoTitolo">Nessun preferito trovato</string>
    <string name="NessunPreferitoSototitolo">Inserendo un preferito si possono ricevere notifiche rigardo ai furti segnalati in zona</string>
    <string name="BottoneAggiungiFav">Aggiungi un nuovo preferito</string>
    <string name="Bottone_anulla_ancellazione_favortiti">Anulla</string>
    <string name="Bottone_elimina_favorito">Elimina</string>
    <string name="Informazioni">Applicazzione svlipuata per il corso di Interazion su Web, Universita La Sapeinza. Studenti: Nigel Pllaha, Daniel Palomar, Xavier de la Fuente.
      \n\n  Questa applicazione offre la possibilita di segnlare i furti subbiti, e vissualizzare i furti segnalati da gli altri uttenti
    \n\n Aggiungendo una zona ai preferiti, ogni volta che vicino a quella zona viene segnalato un furto si riceverera una notifica</string>
    <string name="logo_sapienzza">Logo universita la Sapienza</string>
    <string name="bottone_accetta">Accetta</string>
    <string name="bottone_cancella">Cancella</string>
    <string name="caricando_dati">Caricando i dati di tutti furti nella zona.\nPuò prendere alcuni secondi.</string>
    <string name="max_preferiti">Hai già il massimo di preferiti</string>


</resources>
 