<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/favoriti_layout">

    <!--Toolbar -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <include
            layout="@layout/toolbar" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/NessunPreferitoTitolo"
            android:id="@+id/textView5"
            android:layout_marginTop="156dp"
            android:textColor="#a4000000"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/NessunPreferitoSototitolo"
            android:id="@+id/textView6"
            android:layout_below="@+id/textView5"
            android:textAlignment="gravity"
            android:gravity="center_vertical|center_horizontal|fill_vertical" />
    </RelativeLayout>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BottoneAggiungiFav"
        android:id="@+id/button"
        android:textColor="@color/accent_material_light"
        android:onClick="nuovoFavorito"
        android:layout_marginRight="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="77dp" />


</RelativeLayout>
