<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Titolo di Furto -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/titolo_furto"
                    android:textSize="25dp" />
                <TextView
                    android:layout_alignParentRight="true"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:textSize="25sp"
                    android:id="@+id/titolo_furto"/>
            </RelativeLayout>

            <!-- Tipo di Furto -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/tipo_furto"
                    android:textSize="25dp" />
                <TextView
                    android:layout_alignParentRight="true"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:textSize="25sp"
                    android:id="@+id/tipo_furto"/>

            </RelativeLayout>

            <!-- Indirizzo -> Digitare coordinate o clic in map-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/indirizzo"
                    android:textSize="25dp"/>
                <TextView
                    android:layout_alignParentRight="true"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:textSize="25sp"
                    android:id="@+id/indirizzo_furto" />

            </RelativeLayout>

            <!-- Date -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/date"
                    android:textSize="25dp"/>
                <TextView
                    android:layout_alignParentRight="true"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:textSize="25sp"
                    android:id="@+id/date_furto" />

            </RelativeLayout>

            <!-- Ora -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/ora"
                    android:textSize="25dp" />
                <TextView
                    android:layout_alignParentRight="true"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:textSize="25sp"
                    android:id="@+id/fascia_ora_furto" />

            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/descrizione"
                    android:textSize="25dp"/>
                <TextView
                    android:layout_alignParentRight="true"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:textSize="25sp"
                    android:id="@+id/descrizione_furto"/>
            </LinearLayout>

            <!-- Mostra Commenti -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/view_commenti"
                    android:textSize="25dp"/>
                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_alignParentRight="true"
                        android:layout_width="175dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="20dp"
                        android:textSize="25sp"
                        android:id="@+id/all_commenti"/>
                </ScrollView>
            </LinearLayout>

            <!-- New Commento -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/commento"
                    android:textSize="25dp"/>
                <EditText
                    android:paddingTop="0px"
                    android:gravity="top"
                    android:layout_width="fill_parent"
                    android:layout_height="103dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:id="@+id/commento_nuovo"
                    android:hint="@string/commento_hint"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <Button
                    android:layout_width="160dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="20dp"
                    android:drawableBottom="@drawable/ic_action_accept"
                    android:text="Accettare"
                    android:onClick="enviareCommento"
                    android:textSize="10dp"
                    android:scaleY=".8"
                    android:layout_weight="0.30"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <Button
                    android:layout_width="160dp"
                    android:layout_height="70dp"
                    android:layout_marginRight="20dp"
                    android:drawableBottom="@drawable/ic_action_back"
                    android:text="Cancelare"
                    android:textSize="10dp"
                    android:scaleY=".8"
                    android:onClick="cancelare"
                    android:layout_weight="0.30"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>